infrastructure/cloudformation/simple-ec2-instance-securitygroup-cloudformation-stack.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
  "Resources": {
    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-cd0f5cb6",
        "InstanceType": "t2.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "WebServerSecurityGroup",
              "GroupId"
            ]
          }
        ],
        "KeyName": "csye6225-aws",
        "SubnetId": "subnet-8ef300c5"
      }
    },
    "WebServerSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupName":"csye6225-fall2017-test-webapp",
        "GroupDescription": "Enable HTTP access via port 80, SSH access via port 22",
        "VpcId": "vpc-45243a3c",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "80",
            "ToPort": "80",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    }
  }
}
